Move GSoC stuff to separate section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,6 @@ site_name: retest docs
 nav:
   - Home: index.md
   - recheck:
-    - 'Google Summer of Code': 'recheck/gsoc.md'
     - 'How ignore works': 'recheck/how-ignore-works-in-recheck.md'
     - 'Location of the Golden Master files': 'recheck/location-of-the-golden-master-files.md'
     - 'Reuse Golden Master Files': 'recheck/reuse-golden-master-files.md'
@@ -10,4 +9,6 @@ nav:
   - retest:
     - 'English': 'retest/en/index.md'
     - 'German': 'retest/de/index.md'
+  - Misc:
+    - 'Google Summer of Code': 'recheck/gsoc.md'
 theme: readthedocs
