--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ install:
   - pip install mkdocs
 
 script:
-  - mkdocs build --clean
+  - mkdocs build --clean --strict
 
 deploy:
   provider: pages
