--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,7 @@ nav:
   - recheck:
     - 'How ignore works': 'recheck/how-ignore-works-in-recheck.md'
     - 'Location of the Golden Master files': 'recheck/location-of-the-golden-master-files.md'
-    - 'Reuse Golden Master Files': 'recheck/reuse-golden-master-files.md'
+    - 'Reuse Golden Master files': 'recheck/reuse-golden-master-files.md'
   - recheck-web: 'recheck-web/home.md'
   - retest:
     - 'English': 'retest/en/index.md'
