--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,8 @@ nav:
     - 'How ignore works': 'recheck/how-ignore-works-in-recheck.md'
     - 'Location of the Golden Master files': 'recheck/location-of-the-golden-master-files.md'
     - 'Reuse Golden Master files': 'recheck/reuse-golden-master-files.md'
-  - recheck-web: 'recheck-web/home.md'
+  - recheck-web:
+    - 'recheck-web/home.md'
   - retest:
     - 'English': 'retest/en/index.md'
     - 'Deutsch': 'retest/de/index.md'
