--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,18 +17,18 @@ nav:
     - 'recheck.cli/setup.md'
   - recheck-web:
     - 'recheck-web/properties.md'
-    - setup:
-      - 'recheck-web/setup/maven.md'
-    - tutorial:
-      - 'recheck-web/tutorial/explicit-checks.md'
-      - 'recheck-web/tutorial/mvn-execute-locally.md'
-      - 'recheck-web/tutorial/rule-based-ignore.md'
+    - Setup:
+      - 'Setting up a project using Maven': 'recheck-web/setup/maven.md'
+    - Tutorial:
+      - 'Using Explicit Checks': 'recheck-web/tutorial/explicit-checks.md'
+      - 'Execute the Test with Maven': recheck-web/tutorial/mvn-execute-locally.md'
       - 'recheck-web/tutorial/setup-recheck.ignore.md'
-      - 'recheck-web/tutorial/travis-execute-ci.md'
-      - 'recheck-web/tutorial/using-git-and-github.md'
-    - 'recheck-web/element-identification-problem.md'
-    - 'recheck-web/postpone-test-breakage.md'
-    - 'recheck-web/unbreakable-selenium.md'
+      - 'Using Git and GitHub': 'recheck-web/tutorial/using-git-and-github.md'
+      - 'Executing the Test with CI/CD': 'recheck-web/tutorial/travis-execute-ci.md'
+      - 'Rule-Based Ignore': 'recheck-web/tutorial/rule-based-ignore.md'
+    - 'The GUI Element Identification Problem': 'recheck-web/element-identification-problem.md'
+    - 'Postponing Test Breakage': 'recheck-web/postpone-test-breakage.md'
+    - 'Unbreakable Selenium': 'recheck-web/unbreakable-selenium.md'
     - 'recheck-web/contributor-information.md'
   - retest:
     - 'English': 'retest/en/index.md'
