--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ nav:
       - 'Setting up a Project Using Maven': 'recheck-web/setup/maven.md'
     - Tutorial:
       - 'Using Explicit Checks': 'recheck-web/tutorial/explicit-checks.md'
-      - 'Execute the Test with Maven': recheck-web/tutorial/mvn-execute-locally.md'
+      - 'Execute the Test with Maven': 'recheck-web/tutorial/mvn-execute-locally.md'
       - 'recheck-web/tutorial/setup-recheck.ignore.md'
       - 'Using Git and GitHub': 'recheck-web/tutorial/using-git-and-github.md'
       - 'Execute the Test on a CI Server': 'recheck-web/tutorial/travis-execute-ci.md'
