--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,8 @@ nav:
     - 'recheck/location-of-the-golden-master-files.md'
     - 'recheck/reuse-golden-master-files.md'
   - recheck.cli:
-    - 'recheck.cli/setup.md'
+    - Setup:
+      - 'recheck.cli/setup/setup.md'
   - recheck-web:
     - 'recheck-web/properties.md'
     - Setup:
