--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,8 +30,8 @@ nav:
     - 'recheck-web/properties.md'
     - 'recheck-web/contributor-information.md'
   - recheck.cli:
-    - 'recheck.cli/setup/setup.md'
-    - 'recheck.cli/tutorial/maintain-golden-master.md'
+    - 'recheck.cli/setup.md'
+    - 'recheck.cli/maintain-golden-master.md'
   - retest:
     - 'English': 'retest/en/index.md'
     - 'Deutsch': 'retest/de/index.md'
