Add documentation for proxy settings

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,8 @@ extra:
 
 nav:
   - Home: index.md
+  - review:
+    - 'review/proxy.md'
   - recheck:
       - "recheck/introduction/index.md"
       - "recheck/introduction/installation.md"
