--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,7 @@
 site_name: retest docs
 
 theme:
-   name: "mkdocs"
-   custom_dir: 'custom_theme/'
+  name: material
         
 extra_css:
     - 'css/custom.css'
