--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ theme:
   palette:
     primary: "lime"
     accent: "red"
-        
+
 repo_name: "retest/docs"
 repo_url: "https://github.com/retest/docs"
 extra:
@@ -25,32 +25,32 @@ extra:
 nav:
   - Home: index.md
   - recheck:
-    - 'recheck/how-ignore-works.md'
-    - 'recheck/location-of-the-golden-master-files-and-test-reports.md'
-    - 'recheck/reuse-golden-master-files.md'
-    - 'recheck/properties.md'
+      - "recheck/how-ignore-works.md"
+      - "recheck/location-of-the-golden-master-files-and-test-reports.md"
+      - "recheck/reuse-golden-master-files.md"
+      - "recheck/properties.md"
   - recheck-web:
-    - Setup:
-      - 'recheck-web/setup/maven.md'
-    - Tutorial:
-      - 'recheck-web/tutorial/explicit-checks.md'
-      - 'recheck-web/tutorial/mvn-execute-locally.md'
-      - 'recheck-web/tutorial/setup-recheck.ignore.md'
-      - 'recheck-web/tutorial/using-git-and-github.md'
-      - 'recheck-web/tutorial/travis-execute-ci.md'
-      - 'recheck-web/tutorial/upload-test-reports-to-rehub.md'
-      - 'recheck-web/tutorial/rule-based-ignore.md'
-    - 'recheck-web/ways-of-using-recheck-web.md'
-    - 'recheck-web/element-identification-problem.md'
-    - 'recheck-web/postpone-test-breakage.md'
-    - 'recheck-web/unbreakable-selenium.md'
-    - 'recheck-web/properties.md'
-    - 'recheck-web/contributor-information.md'
+      - Setup:
+          - "recheck-web/setup/maven.md"
+      - Tutorial:
+          - "recheck-web/tutorial/explicit-checks.md"
+          - "recheck-web/tutorial/mvn-execute-locally.md"
+          - "recheck-web/tutorial/setup-recheck.ignore.md"
+          - "recheck-web/tutorial/using-git-and-github.md"
+          - "recheck-web/tutorial/travis-execute-ci.md"
+          - "recheck-web/tutorial/upload-test-reports-to-rehub.md"
+          - "recheck-web/tutorial/rule-based-ignore.md"
+      - "recheck-web/ways-of-using-recheck-web.md"
+      - "recheck-web/element-identification-problem.md"
+      - "recheck-web/postpone-test-breakage.md"
+      - "recheck-web/unbreakable-selenium.md"
+      - "recheck-web/properties.md"
+      - "recheck-web/contributor-information.md"
   - recheck.cli:
-    - 'recheck.cli/setup.md'
-    - 'recheck.cli/maintain-golden-master.md'
+      - "recheck.cli/setup.md"
+      - "recheck.cli/maintain-golden-master.md"
   - retest:
-    - 'English': 'retest/en/index.md'
-    - 'Deutsch': 'retest/de/index.md'
+      - "English": "retest/en/index.md"
+      - "Deutsch": "retest/de/index.md"
   - Misc:
-    - 'Google Summer of Code': 'misc/gsoc.md'
+      - "Google Summer of Code": "misc/gsoc.md"
