--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,7 @@ nav:
   - Home: index.md
   - recheck:
       - Introduction: "recheck/introduction/index.md"
+      - Installation: "recheck/introduction/installation.md"
       - "recheck/how-ignore-works.md"
       - "recheck/location-of-the-golden-master-files-and-test-reports.md"
       - "recheck/reuse-golden-master-files.md"
