Add basic recheck usage

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
   - recheck:
       - "recheck/introduction/index.md"
       - "recheck/introduction/installation.md"
+      - "recheck/introduction/usage.md"
       - "recheck/how-ignore-works.md"
       - "recheck/location-of-the-golden-master-files-and-test-reports.md"
       - "recheck/reuse-golden-master-files.md"
