Reuse the h1 headers as mkdocs uses them specifically

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,8 +29,8 @@ extra:
 nav:
   - Home: index.md
   - recheck:
-      - Introduction: "recheck/introduction/index.md"
-      - Installation: "recheck/introduction/installation.md"
+      - "recheck/introduction/index.md"
+      - "recheck/introduction/installation.md"
       - "recheck/how-ignore-works.md"
       - "recheck/location-of-the-golden-master-files-and-test-reports.md"
       - "recheck/reuse-golden-master-files.md"
