Add new page to yml file

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
       - "recheck/introduction/installation.md"
       - "recheck/how-ignore-works.md"
       - "recheck/location-of-the-golden-master-files-and-test-reports.md"
+      - "recheck/recheck-options.md"
       - "recheck/reuse-golden-master-files.md"
       - "recheck/properties.md"
   - recheck-web:
