--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,6 +41,7 @@ nav:
       - "recheck/introduction/usage.md"
       - "recheck/how-ignore-works.md"
       - "recheck/location-of-the-golden-master-files-and-test-reports.md"
+      - "recheck/recheck-options.md"
       - "recheck/properties.md"
   - recheck-web:
       - Setup:
