--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ plugins:
   - redirects:
       redirect_maps:
         "recheck/how-ignore-works-in-recheck.md": "recheck/how-ignore-works.md"
+        "recheck/reuse-golden-master-files.md": "recheck/introduction/usage.md"
 
 repo_name: "retest/docs"
 repo_url: "https://github.com/retest/docs"
