Move location to configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ plugins:
         "recheck/reuse-golden-master-files.md": "recheck/introduction/usage.md"
         "recheck/properties.md": "recheck/usage/configuration.md"
         "recheck/recheck-options.md": "recheck/usage/configuration.md"
+        "recheck/location-of-the-golden-master-files-and-test-reports.md": "recheck/usage/configuration.md"
 
 repo_name: "retest/docs"
 repo_url: "https://github.com/retest/docs"
@@ -49,7 +50,6 @@ nav:
       - "recheck/introduction/usage.md"
       - "recheck/usage/configuration.md"
       - "recheck/how-ignore-works.md"
-      - "recheck/location-of-the-golden-master-files-and-test-reports.md"
   - recheck-web:
       - Setup:
           - "recheck-web/setup/maven.md"
