--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 
 install:
-  - pip install mkdocs-material mkdocs-redirects
+  - pip install mkdocs-material mkdocs-redirects pymdown-extensions
 
 script:
   - mkdocs build --clean --strict
