Move contributing information into own tab
so that it is not free floating and can be removed from references.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,6 +45,9 @@ extra:
 
 nav:
   - Home: index.md
+  - Contributing:
+      - "Code of Conduct": contributing/code-of-conduct.md
+      - "Guidelines": contributing/guidelines.md
   - recheck:
       - "recheck/introduction/index.md"
       - "recheck/introduction/installation.md"
