Add usage and maintaining Golden Master via review

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,3 +78,5 @@ nav:
   - recheck.cli:
       - "recheck.cli/setup.md"
       - "recheck.cli/maintain-golden-master.md"
+  - review:
+      - "review/usage-and-maintaining.md"
