--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ plugins:
         "recheck/recheck-options.md": "recheck/usage/configuration.md"
         "recheck/location-of-the-golden-master-files-and-test-reports.md": "recheck/usage/configuration.md"
         "recheck/how-ignore-works.md": "recheck/usage/filter.md"
+        "recheck-web/properties.md": "recheck-web/usage/configuration.md"
 
 repo_name: "retest/docs"
 repo_url: "https://github.com/retest/docs"
@@ -73,7 +74,7 @@ nav:
       - "recheck-web/element-identification-problem.md"
       - "recheck-web/postpone-test-breakage.md"
       - "recheck-web/unbreakable-selenium.md"
-      - "recheck-web/properties.md"
+      - "recheck-web/usage/configuration.md"
       - "recheck-web/contributor-information.md"
   - recheck.cli:
       - "recheck.cli/setup.md"
