Add IDE settings description

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ nav:
   - Contributing:
       - "Code of Conduct": contributing/code-of-conduct.md
       - "Guidelines": contributing/guidelines.md
+      - "contributing/ide-settings.md"
   - recheck:
       - "recheck/introduction/index.md"
       - "recheck/introduction/installation.md"
