--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,11 +7,11 @@ theme:
   icon:
     logo: "retest/logo"
     repo: "fontawesome/brands/github"
-  palette:
-    primary: "lime"
-    accent: "red"
   features:
     - tabs
+
+extra_css:
+  - "assets/stylesheets/colors.css"
 
 markdown_extensions:
   - admonition
